syntax = "proto3"; //Specify proto3 version.

package work_leave; //Optional: unique package name.

service get_phrase {
  rpc catch_Phrase (test) returns (return_test);
}
message test{
  int32 hour = 1;
}
message return_test{
  int32 value = 1;
}
